--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,7 @@
 @media (max-width: 575.98px) { 
     .content {
         padding: 0 1rem;
+        margin-bottom: 5rem;
     }
     .content h1 {
         font-size: 4rem;
@@ -9,8 +10,19 @@
 
 @media (min-width: 576px) and (max-width: 767.98px) { ... }
 
-@media (min-width: 768px) and (max-width: 991.98px) { ... }
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    .content {
+        margin-bottom: 5rem;
+    }
+}
 
-@media (min-width: 992px) and (max-width: 1199.98px) { ... }
+@media (min-width: 992px) and (max-width: 1199.98px) {  
+    .content {
+        margin-top: 3rem;
+    }
+    .content h1 {
+        font-size: 4rem;
+    }
+}
 
 @media (min-width: 1200px) { ... }
