--- a/responsive.css
+++ b/responsive.css
@@ -8,7 +8,11 @@
     }
 }
 
-@media (min-width: 576px) and (max-width: 767.98px) { ... }
+@media (max-width: 768px) { 
+    .video-button {
+        display: none;
+    }
+}
 
 @media (min-width: 768px) and (max-width: 991.98px) { 
     .content {
@@ -24,5 +28,3 @@
         font-size: 4rem;
     }
 }
-
-@media (min-width: 1200px) { ... }
