--- a/style.css
+++ b/style.css
@@ -108,6 +108,12 @@ a:hover {
     background-clip: padding-box;
     z-index: 999;
     -webkit-appearance: none;
+    transition: all .5s;
+}
+
+.video-button:hover {
+    transform: scale(1.1);
+    transition: all .5s;
 }
 
 .carousel-control-next, .carousel-control-prev {
@@ -125,8 +131,4 @@ a:hover {
 
 .carousel-control-prev {
     left: 10px;
-}
-
-#properties {
-    padding: 8rem 0;
 }
